Exercici 1 del Nivel 1

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
 <html lang="es">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>S4 ES6</title>
-
+    <title>S4 ES6 N1</title>
 </head>
 <body>
-<div class="container">
-	
+<div class="container">	
 </div>
+
+<script>
+//NIVEL 1 ES6 - Exercici 1 ------ Convertir a funcio fletxa
+
+//multiplicar 2 números
+multiply = (x1,x2) => x1*x2;
+console.log(multiply(6,5));
+
+</script>
+
 </body>
 </html>
