--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 </div>
 
 <script>
-//NIVEL 1 ES6 - Exercici 2 ------ Error de codi
+//NIVEL 1 ES6 - Exercici 4 ------ string revertit
 
-//NIVEL 1 ES6 - Exercici 3 ------ reduce()
-var epic = ['a', 'long', 'time', 'ago', 'in a', 'galaxy', 'far far', 'away'];
-var reducer =(accumulator, currentValue) => accumulator+" "+currentValue;
+let cadenaText = ['a', 'long', 'time', 'ago', 'in a', 'galaxy', 'far far', 'away'];
+let cadenaR = ['un conte',...cadenaText];
+let reduir =(accumulator, currentValue) => accumulator+" "+currentValue;
+let result1= cadenaR.reduce(reduir);
+let revertida = cadenaR.reverse();
+let result2=revertida.reduce(reduir);
 
-console.log(epic.reduce(reducer));
+	r = (result1,result2) => `${result1}\n${result2}`;
+	console.log(r(result1,result2));
 
 </script>
 
