--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@ var users =
 { firstName: 'Lisa', lastName: 'Simpson' },
 { firstName: 'Maggie', lastName: 'Simpson' }];
 
-
-function firstName(name) {
+/*function firstName(name) {
   var firstName = [name.firstName];
   return firstName;
 }
+console.log(users.map(firstName));*/
+
+const firstName = name => name.firstName;
 console.log(users.map(firstName));
 
 </script>
