--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
 </div>
 
 <script>
-//NIVEL 1 ES6 - Exercici 1 ------ Convertir a funcio fletxa
-
+//NIVEL 1 ES6 - Exercici 1 --------- Convertir a funcio fletxa
 //multiplicar 2 números
 multiply = (x1,x2) => x1*x2;
 console.log(multiply(5,5));
 
-
-
 //passar a graus fahrenheit
 toCelsius = (fahrenheit) => (5/9) * (fahrenheit-32);
 console.log(toCelsius(36));
-
-
 
 // omplir 0 a l'esquerra
  padZeros = (num,totalLen) => {
@@ -36,8 +31,6 @@ console.log(toCelsius(36));
  }
  console.log(padZeros(23,4));
 
-
-
  // exponent
 power = (base, exponent) => { 
    var result=1; 
@@ -47,7 +40,6 @@ power = (base, exponent) => {
    return result;
 } 
 console.log(power(2,2));
-
 
 // mostrar hola maria
 greet = who => `Hello ${who}`;
