modificacions segons rubrica

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 //NIVEL 1 ES6 - Exercici 1 --------- Convertir a funcio fletxa
 //multiplicar 2 números
-multiply = (x1,x2) => x1*x2;
+const multiply = (x1,x2) => x1*x2;
 console.log(multiply(5,5));
 
 //passar a graus fahrenheit
@@ -83,7 +83,7 @@ let result1= cadenaR.reduce(reduir);
 let revertida = cadenaR.reverse();
 let result2=revertida.reduce(reduir);
 
-	r = (result1,result2) => `${result1}\n${result2}`;
+	const r = (result1,result2) => `${result1}\n${result2}`;
 	console.log(r(result1,result2));
 
 //NIVEL 1 ES6 - Exercici 6 ---- array tasques
